update dags create tables

--- a/05-creating-and-scheduling-data-pipelines/docker-compose.yaml
+++ b/05-creating-and-scheduling-data-pipelines/docker-compose.yaml
@@ -217,7 +217,7 @@ services:
       - -c
       - airflow
 
-  warehouse:
+  warehouse: #name of server - service
     image: postgres:13
     environment:
       POSTGRES_USER: postgres
